# echo-stt

./: .gitignore  .nagignore  README.md  config.yaml
src/: app.py  log.py  pyproject.toml  requirements.txt  setup.py  stt.py  vad.py
src/public/: index.html  main.js  styles.css
src/static/: index.html  main.js  styles.css
src/templates/: config.yaml.example
todo/d809/: meta.json
