[project]
name = "stt"
version = "0.1.0"
description = "STT service - Speech recognition using Whisper"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "faster-whisper>=1.0.0",
    "pyyaml>=6.0.0",
    "python-multipart>=0.0.12",
    "numpy>=1.26.0",
    "webrtcvad>=2.0.10",
    "pyaudio>=0.2.14",
    "aiofiles>=23.0.0",
    "websockets>=12.0",
    "pydantic>=2.9.0",
    "echo-common",
]

[tool.uv]
package = false

[tool.uv.sources]
echo-common = { git = "ssh://git@github.com/ramonlabs/echo.git", subdirectory = "services/common" }

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
